added basic tailwind

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <title>Indie Animation Today</title>
     </head>
     <body>
-        <header class="h-6 bg-black text-white flex items-center justify-center border-bottom border-gray-800">
+        <header class="h-[12.5vh] bg-black text-white text-[6.25vh] flex items-center justify-center border-b-[3px] border-white">
             What's New in Indie Animation?
         </header>
-        <article>
+        <article class="min-h-screen px-[10vw] pt-[5vw] bg-gray-600 flex flex-col items-center">
             <section>Test!</section>
         </article>
     </body>
