--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <article class="min-h-screen px-[10vw] pt-[5vw] bg-gray-600 flex flex-col items-center">
             <section>Test!</section>
         </article>
+        <script src="scripts/pull_data.js"></script>
     </body>
 </html>
