final edits to html/css

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdn.tailwindcss.com"></script>
-        <title>Indie Animation Today</title>
+        <title>Animation Today</title>
     </head>
     <body>
         <header class="h-[12.5vh] bg-black text-white text-[6.25vh] flex items-center justify-center border-b-[3px] border-white">
-            What's New in Indie Animation?
+            What's New in 'Fantasy Animation'?
         </header>
-        <article class="min-h-screen px-[10vw] pt-[5vw] bg-gray-600 flex flex-col items-center">
+        <article class="min-h-screen px-[10vw] pt-[5vw] bg-gray-600 flex flex-col">
             <section>Test!</section>
         </article>
         <script src="scripts/pull_data.js"></script>
