broadened query and adjusted title accordingly

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header class="h-[12.5vh] bg-black text-white text-[6.25vh] flex items-center justify-center border-b-[3px] border-white">
-            What's New in 'Fantasy Animation'?
+            What's New in 'Animation'?
         </header>
         <article class="min-h-screen px-[10vw] pt-[5vw] bg-gray-600 flex flex-col">
             <section>Test!</section>
